too long text on header fixed

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,8 @@ https://pixabay.com/de/lebensmittel-messer-hintergrund-2879265/
 
 .toolbar-title-md {
   color: #fff;
+  text-overflow: inherit;
+  white-space: normal;
 }
 
 .alert-message {
